implementing Macro Expansion View 7